--- a/src/components/CreateTableStyle.css
+++ b/src/components/CreateTableStyle.css
@@ -2,7 +2,7 @@
   max-width: 400px;
   margin: 0 auto;
   text-align: center;
-  font-family: Arial;
+  font-family: "Times New Roman", serif;
 }
 
 .form-group {
@@ -26,7 +26,7 @@
 }
 
 .button {
-  background-color: #201c20;
+  background-color: #1a7abb;;
   color: #fff;
   padding: 10px 20px;
   border: none;
