--- a/src/components/FooterStyle.css
+++ b/src/components/FooterStyle.css
@@ -1,4 +1,4 @@
-.footer{
+/* .footer{
     width:100%;
     padding: 6rem 0;
     background-color:  rgba(101, 209, 212, 0.8)
@@ -55,4 +55,4 @@ p{
     grid-template-columns: 1fr;
     }
     
-}
+} */
