--- a/src/components/HeroImageStyle.css
+++ b/src/components/HeroImageStyle.css
@@ -12,7 +12,7 @@
     object-fit: cover;
 }
 
-.mask::after{
+/* .mask::after{
     content: "";
     width: 100%;
     height: 100%;
@@ -22,7 +22,7 @@
     background-color: #79adcc;
     opacity: 0.8;
 
-}
+} */
 
 .hero{
     height:100% ;
