--- a/src/components/forms/basicFormStyle.css
+++ b/src/components/forms/basicFormStyle.css
@@ -13,13 +13,26 @@
   .formContainer {
     background-color: rgba(24, 123, 189, 0.808);
     padding: 20px;
-    width: 350px;
+    width: 400px; 
+    height: 450px;
     border-radius: 50px;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: center; 
   }
   
   
   .inputContainer {
     margin-bottom: 10px; 
+    width: 80%; 
+    margin-bottom: 20px; 
+    
+  }
+
+  .inputContainer input {
+    width: 100%; 
+    padding: 10px; 
   }
   
   .loginButton {
